News detailed view, Comments preview
Added detailed view for the news, edited the validation in creating the
news. Added View Models for the comments, implement Ajax call for
loading the comments.

--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Index.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Index.cshtml
@@ -9,7 +9,7 @@
 {
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h2 class="panel-title">@news.Title</h2>
+            <h2 class="panel-title">@Html.ActionLink(news.Title, "ShowDetails", new {id = news.Id})</h2>
         </div>
         <div class="panel-body">
             @news.Content
