--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Create.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Create.cshtml
@@ -6,7 +6,8 @@
 <h2>Create News</h2>
 @if(ViewBag.Error != null)
 {
-    <div class="alert alert-danger">@ViewBag.Error.ToString()</div>
+    @*<div class="alert alert-danger">@ViewBag.Error.ToString()</div>*@
+    @Html.ValidationSummary("", new { @class = "alert alert-danger" })
 }
 
 @using (Html.BeginForm("Add", "News", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
