--- a/TheFishingSpot/TheFishingSpot.Web/Views/Shared/_Layout.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     @if (Request.IsAuthenticated)
                     {
                         <li class="dropdown">
@@ -36,8 +36,8 @@
                             </ul>
                         </li>
                     }
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)</li>
                 </ul>
 
                 @Html.Partial("_LoginPartial")
