--- a/TheFishingSpot/TheFishingSpot.Web/Views/Account/_SetPasswordPartial.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheFishingSpot.Web.Models.ManageUserViewModel
+﻿@model TheFishingSpot.Web.Models.SetPasswordViewModel
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
