--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Create.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Create.cshtml
@@ -22,7 +22,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Content, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextAreaFor(m => m.Content, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Content, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
