--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/ShowDetails.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/ShowDetails.cshtml
@@ -31,7 +31,7 @@
         </p>
     </div>
 </div>
-<div id="add-comment-form">
+<div id="add-comment-form" class="form-group">
 </div>
 <div id="comments">
 </div>
