Fixed views to use IEnumerable<T> instead of ICollection

--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/Comments/_ShowComments.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/Comments/_ShowComments.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TheFishingSpot.Web.Areas.News.Models
-@model ICollection<CommentViewModel>
+@model IEnumerable<CommentViewModel>
 
 @*<div class="panel panel-default">*@
     @foreach (var comment in Model)
