--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/Comments/_AddComment.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/Comments/_AddComment.cshtml
@@ -4,7 +4,8 @@
         new AjaxOptions
         {
             UpdateTargetId = "comments",
-            InsertionMode = InsertionMode.Replace
+            InsertionMode = InsertionMode.Replace,
+            OnSuccess = "clearCommentContent",
         }, new { @class = "form-horizontal text-center", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -13,7 +14,7 @@
     </div>
     <div class="form-group col-md-12">
         @*@Html.LabelFor(c => c.Content, new { @class = "col-md-2 control-label" })*@
-        @Html.TextAreaFor(c => c.Content, new { @class = "form-control", rows = "5" })
+        @Html.TextAreaFor(c => c.Content, new { @class = "form-control", rows = "5", id = "comment-content" })
     </div>
     <div class="row form-group">
         <input class="btn btn-primary" type="submit" value="Add comment" />
