--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/Comments/_AddComment.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/Comments/_AddComment.cshtml
@@ -3,17 +3,23 @@
 @using (Ajax.BeginForm("AddComment", null,
         new AjaxOptions
         {
-            UpdateTargetId = "comments",
+            UpdateTargetId = "add-comment-form",
             InsertionMode = InsertionMode.Replace,
             OnSuccess = "clearCommentContent",
         }, new { @class = "form-horizontal text-center", role = "form" }))
 {
+    if (ViewBag.Error == true)
+    {
+        @Html.ValidationSummary("", new { @class = "alert alert-danger" })
+    }
     @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.Hidden("NewsId", Model.NewsId)
     </div>
     <div class="form-group col-md-12">
-        @*@Html.LabelFor(c => c.Content, new { @class = "col-md-2 control-label" })*@
+        <div>
+            <label for="comment-content">Comment:</label>
+        </div>
         @Html.TextAreaFor(c => c.Content, new { @class = "form-control", rows = "5", id = "comment-content" })
     </div>
     <div class="row form-group">
