--- a/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Create.cshtml
+++ b/TheFishingSpot/TheFishingSpot.Web/Areas/News/Views/News/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Create News</h2>
-@if(ViewBag.Error != null)
+@if(ViewBag.Error == true)
 {
     @Html.ValidationSummary("", new { @class = "alert alert-danger" })
 }
